# energokodros_website

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.prod.yml  docker-entrypoint.sh  env.template  env_template  gunicorn.conf.py  manage.py  nginx.conf  pyproject.toml
admin/: logic.py  models.py  urls.py  views.py
administrator/: context_processors.py  decorators.py  forms.py  logic.py  urls.py  views.py
administrator/forms/: __init__.py  user_role_application_request_decision_form.py
administrator/logic/: __init__.py  decorators.py  helper_functions.py  simple.py  user_role_application_review_controller.py
administrator/tests/: factories.py  test_user_role_application_decision.py
administrator/views/: __init__.py  simple.py  user_role_application_decision.py  user_role_application_decision_view.py
energokodros/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
energy/: models.py  urls.py
energy/forms/: __init__.py  box_with_sensors_creation.py  energy_consumption_display_page_control_form.py  formsets.py  simple.py  with_relation_readonly_fields.py  without_relation_fields_for_box_sensor_set_creation.py
energy/logic/: __init__.py  aggregated_energy_consumption_controller.py  aggregated_energy_consumption_query_builder.py  ajax.py  box_identifier_validation.py
energy/migrations/: 0001_initial.py  0002_alter_boxsensorsset_facility.py  0003_alter_boxsensorsset_facility.py  0004_alter_boxsensorsset_date_set_in_and_more.py  0005_rename_box_number_box_box_identifier_and_more.py  0006_alter_boxsensorsset_sensor_number_and_more.py  (+7 more)
institutions/: models.py  tests.py  urls.py
templates/: admin.html  admin_page.html  administrator.html  bare_base.html  base.html  index.html  some-text-in-center-base.html  successfully_created_registration_request.html
users/: backends.py  context_processors.py  decorators.py  forms.py  logic.py  models.py  tests.py  urls.py  utils.py  views.py
utils/: common.py  crypto.py  exceptions.py  filters.py  for_tests_only.py  forms.py  types.py
(+261 files in other folders)
