[tool.poetry]
name = "energokodros"
version = "0.1.0"
description = ""
authors = ["senyehor <senyehor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
factory-boy = "^3.2.1"
django-environ = "^0.8.1"
debug = "^0.3.2"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.1.5"
pylint = "^2.14.3"
pylint-django = "^2.5.3"
hashids = "^1.3.1"
django-active-link = "^0.1.8"
django-treebeard = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
